[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Olga Mageria <olgamageria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
fastapi = "^0.115.2"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.12"
pytest = "^8.3.3"
httpx = "^0.27.2"
anyio = "^4.6.2.post1"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
